# IrAPI-testo-87x

./: README.md
linux_amd64_gcc-9/cmake/: FindIrApi.cmake  FindOpenCv.cmake  VSEnv.vcxproj.user.in
linux_amd64_gcc-9/example/: example_cam.cpp
linux_amd64_gcc-9/include/: ircam2020_config.h
linux_amd64_gcc-9/lib/: IrApiExampleBmt  IrApiExampleCam  libz.so.1.2.11  libzd.so.1.2.11
windows_amd64_msvc16/: IrApi.cmake
windows_amd64_msvc16/cmake/: TestoLibFunctions.cmake
windows_amd64_msvc16/example/: IR_EXAMPLE.BMT
windows_amd64_msvc16/include/: ircam2020_config.h
windows_amd64_msvc16/lib/: core_action_1_0.lib  core_action_1_0d.lib  core_checksum_1_0.lib  core_checksum_1_0d.lib  core_codecs_1_0.lib  core_codecs_1_0d.lib  core_dataproxy_1_0.lib  core_dataproxy_1_0d.lib  core_datatypes_1_0.lib  core_datatypes_1_0d.lib  core_exception_1_0.lib  core_exception_1_0d.lib  core_format_1_0.lib  core_format_1_0d.lib  core_imgio_1_0.lib  core_imgio_1_0d.lib  core_logging_1_0.lib  core_logging_1_0d.lib  core_memory_1_0.lib  core_memory_1_0d.lib  core_message_1_0.lib  core_message_1_0d.lib  core_protocol_1_0.lib  core_protocol_1_0d.lib  core_quantity_1_0.lib  core_quantity_1_0d.lib  core_socket_1_0.lib  core_socket_1_0d.lib  core_streaming_1_0.lib  core_streaming_1_0d.lib  core_utils_1_0.lib  core_utils_1_0d.lib  devicecom_camera_1_0.lib  devicecom_camera_1_0d.lib  devicecom_camera_irsoft_1_0.lib  devicecom_camera_irsoft_1_0d.lib  devicecom_core_1_0.lib  devicecom_core_1_0d.lib  (+38 more)
windows_i386_msvc16/example/: CMakeLists.txt  example_bmt.cpp  example_cam.cpp
(+83 files in other folders)
